@@ -1,3 +1,10 @@
+2008-01-22  Sam Steingold  <sds@gnu.org>
+
+	fix bug #[ 1877497 ]: the set of restarts grows with each image save
+	* savemem.lisp (saveinitmem): bind *ACTIVE-RESTARTS* &
+	*CONDITION-RESTARTS* to NIL around SAVEMEM instead of setting them
+	to NIL in the *DRIVER* to avoid multiple ABORT restarts in saved images
+
 2008-01-21  Sam Steingold  <sds@gnu.org>
 
 	* eval.d (reset): set unwind_protect_to_save.upto_frame;
